--- a/css/scss/_res-company.scss
+++ b/css/scss/_res-company.scss
@@ -1,34 +1,10 @@
-// 화면이 1200px 이하일 때
-@media (max-width: 1200px) {
+// 화면이 768px 이상 1024 이하 일 때
+@media (min-width: 768px) and (max-width: 1024px) {
     .company {
         width: 100%;
         padding: 0 25px;
-        margin: 80px auto 0 auto;
+        margin: 0 auto 0 auto;
     }
-    
-    .tab-list {
-        flex-wrap: wrap;
-        gap: 10px;
-    }
-
-    .tab-list li {
-        padding: 10px 20px;
-        font-size: 1rem;
-    }
-
-    .tab-con01 > b,
-    .tab-con01 > strong {
-        font-size: 40px;
-    }
-
-    .tab-con01 > p {
-        font-size: 18px;
-    }
-}
-
-
-// 화면이 768px 이상 1024 이하 일 때
-@media (min-width: 768px) and (max-width: 1024px) {
     .main-title {
         margin: 30px 50px 90px;
         font-size: 1.2rem;
@@ -42,7 +18,7 @@
     }
     .tab-con01 > b,
     .tab-con01 > strong {
-        font-size: 30px;
+        font-size: 35px;
     }
     .tab-con01 > p {
         font-size: 15px;
@@ -157,7 +133,7 @@
 }
 .tab-con02 > p{
     margin-top: 60px;
-    font-size: 15px;
+    font-size: 20px;
     font-family: 'NanumGothic';
     line-height: 2.1;
 }
@@ -170,7 +146,7 @@
 .tab-sub-head > p{
     font-family: 'NanumGothicBold';
     border-bottom: 2px solid transparent;
-    font-size: 17px;
+    font-size: 20px;
 }
 .tab-sub-head > p:hover,
 .tab-sub-head > p.active
@@ -290,7 +266,7 @@
     font-family: 'NanumGothicBold';
 }
 .history-main > p {
-    font-size: 23px;
+    font-size: 25px;
     font-family: 'NanumGothicBold';
     margin-left: 40px;
 }
@@ -348,7 +324,7 @@
     display: inline-block;
 }
 .tab-coon01 > h1{
-    font-size: 16px;
+    font-size: 15px;
     margin-top: 45px;
     font-family: 'NanumGothicBold';
     text-align: center;
@@ -434,6 +410,11 @@
 }
 // 화면이 480px 이하일 때 
 @media (max-width: 480px) {
+    .company {
+        width: 100%;
+        padding: 0 25px;
+        margin: 0 auto 0 auto;
+    }
     .main-title {
         margin: 30px 25px;
         font-size: 1rem;
@@ -448,19 +429,19 @@
     }
     .tab-con01 > b,
     .tab-con01 > strong {
-        font-size: 24px;
+        font-size: 30px;
     }
     .tab-con01 > p {
-        font-size: 13px;
+        font-size: 15px;
         line-height: 2;
     }
     .tab-sub01 > b{
         background-color: #DCEFB7;
-        font-size: 17px;
+        font-size: 18px;
         font-family: 'NanumGothicBold';
     }
     .tab-sub01 > p{
-        font-size: 13px;
+        font-size: 15px;
         margin-top: 30px;
         line-height: 2.1;
         font-family: 'NanumGothic';
@@ -497,7 +478,7 @@
         }
     }
     .tab-sub02 > p{
-        font-size: 17px;
+        font-size: 18px;
         background-color: #DCEFB7;
         display: inline-block; //글자크기에 맞춰테두리
         margin-bottom: 20px;
@@ -553,7 +534,7 @@
 
     .tab-list li {
         padding: 8px 15px;
-        font-size: 0.9rem;
+        font-size: 0.6rem;
     }
 
     .tab-con02{
@@ -561,17 +542,20 @@
         margin-top: 110px;
     }
     .tab-con02 > b{
-        font-size: 22px;
+        font-size: 30px;
         font-family: 'NanumGothicExtraBold';
         color: #8CC63E;
     }
     .tab-con02 > strong{
-        font-size: 22px;
+        font-size: 30px;
         font-family: 'NanumGothicExtraBold';
+    }
+    .tab-con02 > strong > br{
+        display: none;
     }
     .tab-con02 > p{
         margin-top: 60px;
-        font-size: 13px;
+        font-size: 15px;
         font-family: 'NanumGothic';
         line-height: 2.1;
     }
@@ -584,7 +568,7 @@
     .tab-sub-head > p{
         font-family: 'NanumGothicBold';
         border-bottom: 2px solid transparent;
-        font-size: 14px;
+        font-size: 15px;
     }
     .tab-sub-head > p:hover,
     .tab-sub-head > p.active
@@ -668,10 +652,10 @@
         margin-top: 170px;
     }
     .history-main > figure > img{
-        width: 70%;
+        width: 80%;
         max-width: 300px;
         height: auto;
-        margin-right: -10px;
+        margin-right: -1px;
     }
     .history-main > h2{
         display: flex;
@@ -684,11 +668,11 @@
         height:100px;
         margin-left: 15px;
         color: white;
-        font-size: 17px;
+        font-size: 20px;
         font-family: 'NanumGothicBold';
     }
     .history-main > p {
-        font-size: 17px;
+        font-size: 20px;
         font-family: 'NanumGothicBold';
         margin-left: 20px;
         margin-top: 0px;
@@ -717,20 +701,19 @@
         width: 100%;
     }
     .tab-coon01 > h2{
-        font-size: 22px;
+        font-size: 30px;
         font-family: 'NanumGothicExtraBold';
         margin-bottom: 60px;
     }
-   
     .tab-coon01 > h2> strong{
-        font-size: 22px;
+        font-size: 30px;
         color: #8CC63E;
     } 
     .tab-coon01 > h2 > strong > br{
         display: none;
     }
     .tab-coon01 > b{
-        font-size: 17px;
+        font-size: 20px;
         font-family: 'NanumGothic';
         display: block;
     }
@@ -748,25 +731,35 @@
         display: inline-block;
     }
     .tab-coon01 > h1{
-        font-size: 12px;
+        font-size: 15px;
         margin-top: 45px;
         font-family: 'NanumGothicBold';
         text-align: center;
     }
+    .tab-cl > figure{
+        width: 40%;
+        margin: 60px 0;
+    }
+    .tab-cl > figure > img{
+        width: 100%;
+        margin: auto;
+    }
     .tab-cl > p{
-        font-size: 16px;
+        font-size: 20px;
         font-family: 'NanumGothicExtraBold';
         color: #8CC63E;
+        margin-right: 20px;
     }
     .tab-cl > b{
-        font-size: 16px;
+        font-size: 20px;
         font-family: 'NanumGothicExtraBold';
+        margin-left: 20px;
     }
     .tab-cl01{
         float: none;
     }
     .tab-cl01 > b{
-        font-size: 17px;
+        font-size: 20px;
         font-family: 'NanumGothicBold';
         text-align: center;
     }
@@ -784,7 +777,7 @@
         margin-top: 60px;
     }
     .tab-cl01 > p{
-        font-size: 13px;
+        font-size: 15px;
         font-family: 'NanumGothic';
         margin-top: 60px;
         text-align: center;
@@ -794,7 +787,7 @@
         float: none;
     }
     .tab-cl02 > b{
-        font-size: 17px;
+        font-size: 20px;
         font-family: 'NanumGothicBold';
         text-align: center;
     }
@@ -812,7 +805,7 @@
         margin-top: 60px;
     }
     .tab-cl02 > p{
-        font-size: 13px;
+        font-size: 15px;
         font-family: 'NanumGothic';
         margin-top: 50px;
         text-align: center;
