--- a/css/scss/company.scss
+++ b/css/scss/company.scss
@@ -14,7 +14,7 @@
 }
 .company{
     width: 1636px;
-    margin: 110px auto 0 auto;
+    margin: auto auto 0 auto;
 }
 .main-title{
     margin: 50px 0 90px;
@@ -193,7 +193,7 @@
 }
 .tab-sub07 > figure > img{
     float: right;
-    margin-top: 20px;
+    margin-top: 35px;
 }
 
 //history
