--- a/css/food.css
+++ b/css/food.css
@@ -951,8 +951,7 @@ body {
 }
 
 main {
-  margin: 120px 0 170px;
-  line-height: 2;
+  margin-top: 120px;
 }
 
 h2, h3, .tab-list, .food-safety-1,
@@ -1060,7 +1059,7 @@ article {
 article .food-main .food-main-bg {
   width: 100%;
   height: 770px;
-  background: url("../img/food/food_main_01.jpg") no-repeat center center;
+  background: url("../img/food/food_main_01.jpg") no-repeat center center/cover;
   position: relative;
 }
 article .food-main .food-main-bg p {
@@ -1142,7 +1141,7 @@ article .food-rule > div figure::after {
   position: absolute;
   right: 0;
   bottom: 0;
-  transform: translate(-30%, -30%);
+  transform: translate(-30%, -60%);
   font-family: "money";
   font-size: 1.25rem;
   color: var(--color-green1);
@@ -1207,14 +1206,17 @@ article .food-campaign ul {
   background-color: var(--color-green3);
   background-image: url("../img/food/food_bg_02.svg");
   background-position: center center;
-  padding: 120px 10%;
+  padding: 120px 0;
   margin-top: 90px;
 }
 article .food-campaign li {
+  width: 1300px;
   margin: 90px auto;
-  padding: 50px;
+  padding: 60px;
   display: flex;
   align-items: center;
+  -moz-column-gap: 5%;
+       column-gap: 5%;
   border-radius: 46px;
   background-color: var(--color-white);
   position: relative;
@@ -1261,7 +1263,6 @@ article .food-content-left img {
 }
 article .campaign-content-right {
   text-align: left;
-  margin-left: 5%;
 }
 article .campaign-content-right b {
   font-family: "money";
@@ -1272,6 +1273,7 @@ article .campaign-content-right p {
   margin: 10px 0 20px;
 }
 article .campaign-content-right .name {
+  width: 133px;
   vertical-align: top;
   padding-right: 15px;
   font-family: "NanumGothicBold";
@@ -1366,8 +1368,8 @@ article .food-safety-2 .safety-content-right span {
 }
 
 .popup {
-  width: 70%;
-  height: 80%;
+  width: 60%;
+  height: 70%;
   margin: 0 auto;
   display: flex;
   padding: 50px;
@@ -1406,13 +1408,13 @@ article .food-safety-2 .safety-content-right span {
   color: var(--color-green1);
 }
 .popup .popup-cont .button {
-  margin: 30px 0 50px;
+  margin-top: 40px;
 }
 .popup .popup-close-btn {
   position: absolute;
   right: 2%;
-  top: -3%;
-  transform: translate(-2%, 3%);
+  top: 1%;
+  transform: translate(-2%, -1%);
   font-size: 3rem;
 }
 
@@ -1438,273 +1440,28 @@ article .food-safety-2 .safety-content-right span {
 
 @media (min-width: 1024px) and (max-width: 1700px) {
   body {
-    font-size: 15px;
     word-break: keep-all;
   }
-  main {
-    line-height: 135%;
-  }
-  h2, h3, .tab-list, .food-safety-1, .line {
-    margin: 0 50px;
-  }
-  h2 {
-    font-size: 1rem;
-    margin-bottom: 60px;
-  }
-  h3 {
-    margin-bottom: 60px;
-    font-size: 1.75rem;
-    line-height: 1.5;
-  }
-  h3 > br {
-    display: none;
-  }
-  .button {
-    font-size: 0.8rem;
-    border: 2px solid var(--color-green2);
-    border-radius: 30px;
-    padding: 20px 30px;
-  }
-  .main-title {
-    margin: 30px 50px 90px;
-    font-size: 1.2rem;
-    line-height: 2;
-  }
-  .tab-list {
-    font-size: 0.7rem;
-  }
-  .tab-list li {
-    padding: 15px 25px;
-    border-radius: 30px;
-  }
-  article .food-main .food-main-bg {
-    height: auto;
-    position: static;
-    background-position: center bottom;
-  }
-  article .food-main .food-main-bg p {
-    font-size: 0.9rem;
-    padding: 50px 0;
-  }
-  article .food-main .food-main-bg span {
-    width: 100%;
-    padding: 30px 60px 0;
-    position: static;
-    transform: translate(0, 0);
-  }
-  article .food-rule {
-    width: 85%;
-    padding: 50px;
-    border-radius: 30px;
-  }
-  article .food-rule > p {
-    font-size: 0.9rem;
-  }
-  article .food-rule > span {
-    font-size: 0.5rem;
-  }
-  article .food-rule > div {
-    display: block;
-    margin-top: 0;
-  }
-  article .food-rule > div figure {
-    border-radius: 30px;
-    width: 100%;
-    height: 30%;
-    padding: 40px 20px;
-    margin: 30px 0;
-  }
-  article .food-rule > div figure > p {
-    width: 100px;
-    height: auto;
-    margin: 0 auto;
-  }
-  article .food-rule > div figure > p img {
-    width: 100%;
-  }
-  article .food-rule > div figure > figcaption p {
-    font-size: 0.9rem;
-    margin: 15px 0 10px;
-  }
-  article .food-rule > div figure > figcaption span {
-    font-size: 0.75rem;
-  }
-  article .food-rule > div figure > figcaption span > br {
-    display: none;
-  }
-  article .food-rule > div figure > span {
-    font-size: 0.5rem;
-  }
-  article .food-rule > div figure::before {
-    border-radius: 30px;
-  }
-  article .food-rule > div figure::after {
-    font-size: 1.2rem;
-    transform: translate(-30%, -150%);
-  }
-  article .food-rule > b {
-    font-size: 0.9rem;
-    letter-spacing: 0.15rem;
-    text-align: center;
-    margin: 0;
-  }
-  article .food-rule::before {
-    background-size: cover;
-    width: 239px;
-    height: 54px;
-  }
-  article .food-rule::after {
-    background-size: cover;
-    width: 162px;
-    height: 151px;
-  }
-  article .food-record span {
-    font-size: 0.85rem;
-  }
-  article .food-record p {
-    margin: 60px 0;
-    width: 100%;
-    height: auto;
-  }
-  article .food-record div:nth-of-type(1) {
-    margin-bottom: 45px;
-  }
-  article .food-campaign > p {
-    width: 162px;
-  }
   article .food-campaign ul {
-    width: 100%;
-    height: auto;
-    background-size: contain;
-    padding: 60px 0;
-    margin-top: 60px;
+    background-position: 0;
   }
   article .food-campaign li {
-    margin: 50px auto;
-    padding: 40px;
-    width: 85%;
-    border-radius: 30px;
-  }
-  article .food-campaign li:nth-of-type(1)::before {
-    border-radius: 30px;
+    width: 55%;
+    display: block;
   }
   article .food-campaign li:nth-of-type(1)::after {
-    font-size: 1.2rem;
-  }
-  article .food-content-left {
-    width: 100%;
-  }
-  article .food-content-left img {
-    border-radius: 30px;
+    right: 3%;
+    bottom: 3%;
+    transform: translate(-3%, -3%);
   }
   article .campaign-content-right {
-    width: 70%;
-    margin-top: 25px;
-  }
-  article .campaign-content-right b {
-    font-size: 1.2rem;
-  }
-  article .campaign-content-right p {
-    font-size: 0.8rem;
-    margin: 15px 0;
-  }
-  article .campaign-content-right .name {
-    width: 97px;
-    padding-right: 10px;
-  }
-  article .campaign-content-right .etarget > img {
-    width: 17px;
-    height: 17px;
-  }
-  article .campaign-content-right .econtent {
-    margin-right: 7px;
-  }
-  article .campaign-content-right .econtent > img {
-    width: 15px;
-    height: 15px;
-    margin-left: 1px;
-  }
-  article .food-safety-1 .food-safety-figure {
-    margin-top: 60px;
-  }
-  article .food-safety-1 .food-safety-figure figure > p {
-    width: 130px;
-    margin: 0 auto;
-  }
-  article .food-safety-1 .food-safety-figure figure > p img {
-    width: 100%;
-  }
-  article .food-safety-1 .food-safety-figure figcaption > p {
-    font-size: 1rem;
-    margin: 15px 0;
-  }
-  article .food-safety-2 .safety-tab-menu {
-    margin: 0 0 60px;
-  }
-  article .food-safety-2 .safety-tab-content span {
-    display: inline-block;
-    margin: 0 50px;
-    line-height: 170%;
-  }
-  article .food-safety-2 .safety-tab-content li {
-    display: block;
-  }
-  article .food-safety-2 .safety-tab-content li:nth-of-type(2) .safety-content-right {
-    margin: 50px 30px 30px auto;
+    margin-top: 50px;
   }
   article .food-safety-2 .safety-content-right {
-    width: 90%;
-    margin: 50px auto 30px 30px;
-  }
-  article .food-safety-2 .safety-content-right strong {
-    font-size: 1.2rem;
-  }
-  article .food-safety-2 .safety-content-right p {
-    font-size: 0.8rem;
-    margin-top: 15px;
-  }
-  article .food-safety-2 .safety-content-right span {
-    display: block;
-    margin: 20px 0 0;
-  }
-  .popup {
-    display: block;
-  }
-  .popup p {
-    width: 100%;
-    height: 60%;
-  }
-  .popup p > img {
-    border-radius: 20px;
-  }
-  .popup .popup-cont {
-    width: 100%;
-    height: auto;
-    margin-left: 0;
-    margin-top: 40px;
-  }
-  .popup .popup-cont h4 {
-    font-size: 1rem;
-  }
-  .popup .popup-cont span {
-    margin: 20px 0;
-  }
-  .popup .popup-cont span > br {
-    display: none;
+    width: 95%;
   }
   .popup .popup-cont .button {
-    margin: 25px 0;
-  }
-  .popup .popup-close-btn {
-    top: 3%;
-    transform: translate(-2%, -3%);
-    font-size: 1.8rem;
-  }
-  .record-popup-box1 .popup {
-    padding: 60px 10px;
-  }
-  .record-popup-box1 .popup p img {
-    height: auto;
+    margin-bottom: 50px;
   }
 }
 @media (max-width: 1024px) {
@@ -1970,7 +1727,7 @@ article .food-safety-2 .safety-content-right span {
     display: none;
   }
   .popup .popup-cont .button {
-    margin: 25px 0;
+    margin-top: 25px;
   }
   .popup .popup-close-btn {
     top: 3%;
@@ -1978,6 +1735,7 @@ article .food-safety-2 .safety-content-right span {
     font-size: 1.8rem;
   }
   .record-popup-box1 .popup {
+    height: 40%;
     padding: 60px 10px;
   }
   .record-popup-box1 .popup p img {
@@ -2135,7 +1893,8 @@ article .food-safety-2 .safety-content-right span {
     text-align: right;
   }
   .popup {
-    height: 60%;
+    width: 80%;
+    height: 50%;
     padding: 50px 25px;
   }
   .popup p {
@@ -2146,7 +1905,7 @@ article .food-safety-2 .safety-content-right span {
   }
   .record-popup-box1 .popup {
     width: 80%;
-    height: 40%;
+    height: 30%;
     padding: 50px 10px;
   }
 }
