--- a/css/scss/_res-food.scss
+++ b/css/scss/_res-food.scss
@@ -1,263 +1,37 @@
 @media (min-width:1024px) and (max-width:1700px){
     body{
-        font-size: 15px;
         word-break: keep-all;
     }
-    main{line-height: 135%;}
-    // 좌우 여백 조정(full width contents 제외)
-    h2, h3, .tab-list, .food-safety-1, .line{
-        margin: 0 50px;
-    }
-    h2{
-        // 위에 h2 좌우 margin 설정한 거 때문에 margin-bottom pc와 같은 값이어도 지우지 말기.
-        font-size: 1rem; margin-bottom: 60px;
-    }
-    h3{
-        margin-bottom: 60px;
-        font-size: 1.75rem; line-height: 1.5;
-        > br{display: none;}
-    }
-    // button
-    .button{
-        font-size: 0.8rem;
-        border: 2px solid var(--color-green2);
-        border-radius: 30px;
-        padding: 20px 30px;
-    }
-    // title
-    .main-title{
-        margin: 30px 50px 90px;
-        font-size: 1.2rem;
-        line-height: 2;
-    }
-    // tab
-    .tab-list{
-        font-size: 0.7rem;
-        li{
-            padding: 15px 25px;
-            border-radius: 30px;
-        }
-    }
-    
     article{
-        // 3-1. 바른먹거리 원칙
-        .food-main{
-            .food-main-bg{
-                height: auto;
-                position: static;
-                background-position: center bottom;
-                p{
-                    font-size: 0.9rem;
-                    padding: 50px 0;
-                }
-                span{
-                    width: 100%;
-                    padding: 30px 60px 0;
-                    position: static;
-                    transform: translate(0, 0);
-                }
-            }
-        }
-
-        .food-rule{
-            width: 85%;
-            padding: 50px;
-            border-radius: 30px;
-            > p{font-size: 0.9rem;}
-            > span{font-size: 0.5rem;}
-            > div{
-                display: block;
-                margin-top: 0;
-    
-                figure{
-                    border-radius: 30px;
-                    width: 100%;
-                    height: 30%;
-                    padding: 40px 20px;
-                    margin: 30px 0;
-
-                    > p{
-                        width: 100px; height: auto;
-                        margin: 0 auto;
-                        img{width: 100%;}
-                    }
-                    > figcaption{
-                        p{font-size: 0.9rem; margin: 15px 0 10px;}
-                        span{
-                            font-size: 0.75rem;
-                            > br{display: none;}
-                        }
-                    } 
-                    > span{font-size: 0.5rem;}
-
-                    // hover
-                    &::before{
-                        border-radius: 30px;
-                    }
-                    &::after{
-                        font-size: 1.2rem;
-                        transform: translate(-30%, -150%);
-                    }
-                }
-            }
-            > b{
-                font-size: 0.9rem;
-                letter-spacing: 0.15rem;
-                text-align: center;
-                margin: 0;
-            }
-            // Add Charactor imgs
-            &::before{
-                background-size: cover;
-                width: 239px; height: 54px;
-            }
-            &::after{
-                background-size: cover;
-                width: 162px; height: 151px;
-            }
-        }
-        .food-record{
-            span{font-size: 0.85rem;}
-            p{
-                margin: 60px 0;
-                width: 100%; height: auto;
-            }
-            div:nth-of-type(1){margin-bottom: 45px;}
-        }
-    
         // 3-2. 바른먹거리 캠페인
         .food-campaign{
-            > p{width: 162px;}
-            ul{
-                width: 100%; height: auto;
-                background-size: contain;
-                padding: 60px 0;
-                margin-top: 60px;
-            }
+            ul{background-position: 0;}
             li{
-                margin: 50px auto;
-                padding: 40px;
-                width: 85%;
-                border-radius: 30px;
+                width: 55%;
+                display: block;
 
-                // hover
-                &:nth-of-type(1)::before{
-                    border-radius: 30px;
-                }
                 &:nth-of-type(1)::after{
-                    font-size: 1.2rem;
+                    right: 3%; bottom: 3%;
+                    transform: translate(-3%, -3%);
                 }
             }
-        }
-        .food-content-left{
-            width: 100%;
-                img{border-radius: 30px;}
         }
         .campaign-content-right{
-            width: 70%;
-            margin-top: 25px;
-            b{font-size: 1.2rem;}
-            p{
-                font-size: 0.8rem;
-                margin: 15px 0;
-            }
-            .name{
-                width: 97px;
-                padding-right: 10px;
-            }
-            .etarget{
-                > img{
-                    width: 17px; height: 17px;
-                }
-            }
-            .econtent{
-                margin-right: 7px;
-                > img{
-                    width: 15px; height: 15px;
-                    margin-left: 1px;
-                }
-            }
+            margin-top: 50px;
         }
     
         // 3-3. 식품안전 및 품질정책
-        .food-safety-1{
-            .food-safety-figure{
-                margin-top: 60px;
-                figure > p{
-                    width: 130px;
-                    margin: 0 auto;
-                    img{width: 100%;}
-                }
-                figcaption > p{
-                    font-size: 1rem;
-                    margin: 15px 0;
-                }
-            }
-        }
         .food-safety-2{
-            .safety-tab-menu{
-                margin: 0 0 60px;
-            }
-            .safety-tab-content{
-                span{
-                    display: inline-block; margin: 0 50px;
-                    line-height: 170%;
-                }
-                li{
-                    display: block;
-
-                    &:nth-of-type(2){
-                        .safety-content-right{
-                            margin: 50px 30px 30px auto;
-                        }
-                    }
-                }
-            }
             .safety-content-right{
-                width: 90%;
-                margin: 50px auto 30px 30px;
-                strong{
-                    font-size: 1.2rem;
-                }
-                p{
-                    font-size: 0.8rem;
-                    margin-top: 15px;
-                }
-                span{display: block; margin: 20px 0 0;}
+                width: 95%;
             }
         }
     }
     
     //popup
     .popup{
-        display: block;
-        p{
-            width: 100%; height: 60%;
-            > img{
-                border-radius: 20px;
-            }
-        } 
         .popup-cont{
-            width: 100%; height: auto;
-            margin-left: 0;
-            margin-top: 40px;
-            h4{font-size: 1rem;}
-            span{
-                margin: 20px 0;
-                > br{display: none;}
-            }
-            .button{margin: 25px 0;}
-        }
-        .popup-close-btn{
-            top: 3%;
-            transform: translate(-2%, -3%);
-            font-size: 1.8rem;
-        }
-    }
-    .record-popup-box1 .popup{
-        padding: 60px 10px;
-        p {
-            img{height: auto;}
+            .button{margin-bottom: 50px;}
         }
     }
 }
@@ -517,7 +291,7 @@
                 margin: 20px 0;
                 > br{display: none;}
             }
-            .button{margin: 25px 0;}
+            .button{margin-top: 25px;}
         }
         .popup-close-btn{
             top: 3%;
@@ -526,6 +300,7 @@
         }
     }
     .record-popup-box1 .popup{
+        height: 40%;
         padding: 60px 10px;
         p {
             img{height: auto;}
@@ -728,7 +503,7 @@
     
     //popup
     .popup{
-        height: 60%;
+        width: 80%; height: 50%;
         padding: 50px 25px;
         p{height: 65%;}
         .popup-cont{
@@ -738,7 +513,7 @@
         }
     } 
     .record-popup-box1 .popup{
-        width: 80%; height: 40%;
+        width: 80%; height: 30%;
         padding: 50px 10px;
     }
 }
