--- a/css/scss/_common.scss
+++ b/css/scss/_common.scss
@@ -664,6 +664,7 @@ header {
     align-items: center;
     margin: 0 auto;
     padding-bottom: 10px;
+    padding-top: 170px;
 
     .footer-privacy {
         width: 100%;
