--- a/css/scss/sustainability.scss
+++ b/css/scss/sustainability.scss
@@ -18,7 +18,7 @@
     font-size: 1.6rem;
     b{
         display: inline-block;
-        background-color: white;
+        background-color: var(--color-white);
         position: relative;
         z-index: 2;
         padding-right:20px;
@@ -52,6 +52,8 @@
     background-color: var(--color-green1);
     color: var(--color-white);
 }
+
+main{color: var(--color-black);}
 
 .sustainability{
     width: 1636px;
@@ -129,7 +131,7 @@
                     &::before{
                         content: "";
                         width:5px;height:5px;
-                        background-color: black;
+                        background-color: var(--color-black);
                         border-radius: 100%;
                         margin:10px 10px 0 0;
                     }
