--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -3,6 +3,7 @@
     
     body {
         background-color: var(--color-white);
+        color: var(--color-black);
         font-family: 'NanumGothic';
     }
 
@@ -164,7 +165,7 @@
             color: var(--color-white);
             
             &:nth-of-type(1){
-                font-size: 150px;
+                font-size: 140px;
                 opacity: 60%;
             }
             &:nth-of-type(2){
@@ -173,7 +174,7 @@
             }
             &:nth-of-type(3){
                 font-weight: normal;
-                font-size: 20px;
+                font-size: 15px;
                 white-space: pre-line;
             }
         }
