--- a/css/company.css
+++ b/css/company.css
@@ -956,6 +956,7 @@ header {
 .company {
   width: 1636px;
   margin: auto auto 0 auto;
+  color: var(--color-black);
 }
 
 .main-title {
@@ -967,7 +968,7 @@ header {
 }
 .main-title b {
   display: inline-block;
-  background-color: var(--color-white);
+  background-color: #FFFFFF;
   position: relative;
   z-index: 2;
   padding-right: 20px;
@@ -1020,12 +1021,12 @@ header {
 
 .tab-con01 > b {
   margin-top: 90px;
-  font-size: 50px;
+  font-size: 40px;
   font-family: "NanumGothicExtraBold";
 }
 
 .tab-con01 > strong {
-  font-size: 50px;
+  font-size: 40px;
   color: white;
   background-color: #8CC63E;
   font-family: "NanumGothicExtraBold";
@@ -1176,13 +1177,13 @@ header {
 }
 
 .tab-con02 > b {
-  font-size: 50px;
+  font-size: 40px;
   font-family: "NanumGothicExtraBold";
   color: #8CC63E;
 }
 
 .tab-con02 > strong {
-  font-size: 50px;
+  font-size: 40px;
   font-family: "NanumGothicExtraBold";
 }
 
@@ -1444,7 +1445,7 @@ header {
 }
 
 .tab-coon01 > h2 {
-  font-size: 50px;
+  font-size: 40px;
   font-family: "NanumGothicExtraBold";
   margin-bottom: 60px;
 }
@@ -1860,7 +1861,7 @@ header {
     width: 100%;
   }
   .tab-coon01 {
-    margin-top: 300px;
+    margin-top: 90px;
     text-align: center;
   }
   .tab-coon01 > h2 {
@@ -1986,6 +1987,9 @@ header {
   }
   .main-title b {
     padding-right: 0;
+  }
+  .main-title::after {
+    display: none;
   }
   .tab-list {
     gap: 10px;
