--- a/css/scss/_newsres.scss
+++ b/css/scss/_newsres.scss
@@ -78,11 +78,11 @@ $nanum3 : 'NanumGothicExtraBold';
     align-items: center;
     gap: 20px;
     font-family: 'money';
-    font-size: 1.1rem;
+    font-size: 0.7rem;
     a{
         li{
-            padding: 15px 40px;
-            border-radius: 85px;
+            padding: 15px 25px;
+            border-radius: 30px;
             border:1px solid #ddd;
             transition: .5s;
         }
@@ -559,9 +559,10 @@ ul.tabs li.current{
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 20px;
+        gap: 10px;
         font-family: 'money';
-        font-size: 1.1rem;
+        font-size: 0.6rem;
+        line-height: 1;
         a{
             li{
                 padding: 15px 40px;
