--- a/css/scss/_res-company.scss
+++ b/css/scss/_res-company.scss
@@ -1,5 +1,414 @@
-// 화면이 768px 이상 1024 이하 일 때
-@media (min-width: 768px) and (max-width: 1024px) {
+// 화면이 1024px 이상 1700px이하
+@media (min-width:1024px) and (max-width:1700px) {
+    .company {
+        width: 100%;
+        padding: 0 25px;
+
+    }
+    .main-title {
+        margin: 30px 50px 90px;
+        font-size: 1.6rem;
+    }
+    .tab-list {
+        font-size: 1.1rem;
+        li{
+            padding: 15px 25px;
+            border-radius: 85px;
+        }
+    }
+    .tab-con01 > b,
+    .tab-con01 > strong {
+        font-size: 40px;
+    }
+    .tab-con01 > p {
+        font-size: 20px;
+    }
+    .tab-sub01{
+        float: left;
+        text-align: left;
+    }
+    .tab-sub01 > b{
+        background-color: #DCEFB7;
+        font-size: 25px;
+        font-family: 'NanumGothicBold';
+    }
+    .tab-sub01 > p{
+        font-size: 20px;
+        margin-top: 30px;
+        line-height: 2.1;
+        font-family: 'NanumGothic';
+    }
+    .tab-body02 > figure > img{
+        margin-top: 60px;
+        border-radius: 46px;
+    }
+    .tab-sub02{
+        margin-top: 90px;
+        text-align: left;
+        > div{
+            display: flex;
+            align-items: flex-start;
+            margin: 30px 0;
+            text-align: left;
+            &::before{
+                content: '';
+                display: inline-block;
+                border: 2px solid #DCEFB7;
+                flex-shrink: 0; //부모가 크기에 상관쓰지 못하게 하는것
+                margin-top: 30px;
+                margin: 15px;
+            }
+            &:nth-of-type(1)::before{width: 100px;}
+            &:nth-of-type(2)::before{width: 200px;}
+            &:nth-of-type(3)::before{width: 300px;}
+            >p:nth-of-type(1){
+                flex-shrink: 0;
+                width: 80px;
+                transform: translateY(-30%);
+            }
+        }
+    }
+    .tab-sub02 > p{
+        font-size: 25px;
+        background-color: #DCEFB7;
+        display: inline-block; //글자크기에 맞춰테두리
+        margin-bottom: 20px;
+        font-family: 'NanumGothic';
+    }
+.tab-sub03 > p{
+    font-size: 30px;
+    font-family: 'NanumGothicBold';
+}
+.tab-sub03 > p:last-of-type{
+    font-size: 20px;
+    font-family: 'NanumGothic';
+}
+.tab-sub04 > p{
+    font-size: 30px;
+    font-family: 'NanumGothicBold';
+}
+.tab-sub04 > p:last-of-type{
+    font-size: 20px;
+    font-family: 'NanumGothic';
+}
+.tab-sub05 > p{
+    font-size:30px;
+    font-family: 'NanumGothicBold';
+}
+.tab-sub05 > p:last-of-type{
+    font-size: 20px;
+    font-family: 'NanumGothic';
+}
+.tab-sub06 {
+    text-align: right;
+    font-family: 'NanumGothic';
+}
+.tab-sub06 > p{
+    font-size: 18px;
+    margin-top: 90px;
+    line-height: 1.7;
+    font-family: 'NanumGothic';
+}
+.tab-sub06 > b{
+    font-size: 18px;
+    font-family: 'NanumGothicExtraBold';
+    margin-top: 40px;
+}
+.tab-sub07 > figure > img{
+    width: 25%;
+    height: auto;
+}
+.tab-con02{
+    text-align: center;
+    margin-top: 110px;
+}
+.tab-con02 > b{
+    font-size: 40px;
+    font-family: 'NanumGothicExtraBold';
+    color: #8CC63E;
+}
+.tab-con02 > strong{
+    font-size: 40px;
+    font-family: 'NanumGothicExtraBold';
+}
+.tab-con02 > p{
+    margin-top: 60px;
+    font-size: 20px;
+    font-family: 'NanumGothic';
+    line-height: 2.1;
+}
+.tab-sub-head{
+    margin-top: 110px;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+.tab-sub-head > p{
+    font-family: 'NanumGothicBold';
+    border-bottom: 2px solid transparent;
+    font-size: 20px;
+}
+.tab-sub-head > p:hover,
+.tab-sub-head > p.active
+{
+    font-weight: bold;
+    border-bottom: 2px solid #8CC63E;
+}
+.tab-sub-con01{
+    margin-top: 60px;
+}
+.tab-img-con01{
+    position: relative;
+    border-radius: 46px;
+    overflow: hidden;
+}
+
+.tab-img-con01 > img{
+    width: 100%;
+}
+.tab-img-con01 > p{
+    font-size: 25px;
+    font-family: 'NanumGothic';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    color: white;
+    padding: 15px 0;
+    background-color: rgba(0, 0, 0,0.6);
+    width: 100%;
+}
+    .history {
+        &::before {
+            content: '';
+            position: absolute;
+            left: 50%;
+            top:0;
+            height:100%;
+            border-right:1px solid ;
+        }
+        &::after{
+            content: '';
+            display: block;
+            clear: both;
+        }
+        >div{
+            clear: both;
+            float:left;
+            width:calc(50% - 30px);
+            text-align: right;
+            position: relative;
+            margin:30px 0;
+            line-height: 2.1;
+            font-family: 'NanumGothic';
+        }
+
+       // odd(홀수)/even(짝수)
+    >div:nth-of-type(odd){
+        float:right;
+        text-align: left;
+        &::before{
+            content: '';
+            width:20px; height:20px;
+            border-radius: 100%;
+            border:3px solid #8CC63E;
+            position: absolute;
+            left:-40px; 
+            top:15px;
+            background-color: white;
+        }
+    }
+    >div:nth-of-type(even){
+        &::after{
+            content: '';
+            width:20px; height:20px;
+            border-radius: 100%;
+            border:3px solid #8CC63E;
+            position: absolute;
+            right:-40px; 
+            top:15px;
+            background-color: white;
+        }
+    }
+    ol{
+        margin-top: 20px;
+        font-size: 15px;
+    }
+    div > h2{
+        font-family: 'NanumGothicBold';
+        font-size: 25px;
+        color: #8CC63E;
+    }
+}
+.history-main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 170px;
+}
+.history-main > figure > img{
+    width: 110%;
+    max-width: 300px;
+    height: auto;
+    margin-right: -10px;
+}
+.history-main > h2{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    text-align: center;
+    border: 80px solid #8CC63E;
+    border-radius: 50%;
+    width:100px; 
+    height:100px;
+    margin-left: 70px;
+    color: white;
+    font-size: 25px;
+    font-family: 'NanumGothicBold';
+}
+.history-main > p {
+    font-size: 25px;
+    font-family: 'NanumGothicBold';
+    margin-left: 40px;
+}
+.tab-sub-con02{
+    margin-top: 60px;
+    display: none;
+}
+.tab-img-con02{
+    position: relative;
+    border-radius: 46px;
+    overflow: hidden;
+}
+.tab-img-con02 > img{
+    width: 100%;
+}
+.tab-img-con02 > p{
+    font-size: 25px;
+    font-family: 'NanumGothic';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    color: white;
+    padding: 15px 0;
+    background-color: rgba(0, 0, 0,0.6);
+    width: 100%;
+}
+.tab-coon01{
+    margin-top: 90px;
+    text-align: center;
+}
+.tab-coon01 > h2{
+    font-size: 40px;
+    font-family: 'NanumGothicExtraBold';
+    margin-bottom: 60px;
+}
+.tab-coon01 > h2> strong{
+    color: #8CC63E;
+}
+.tab-coon01 > b{
+    font-size: 30px;
+    font-family: 'NanumGothic';
+    display: block;
+}
+.tab-coon01 > p {
+    text-align: center;
+    font-size: 25px;
+    font-family: 'NanumGothicExtraBold';
+    margin: 45px auto 0;
+    width: auto;
+    padding: 10px;
+    border: 4px solid white;
+    border-radius: 15px;
+    background-color: #8CC63E;
+    color: white;
+    display: inline-block;
+}
+.tab-coon01 > h1{
+    font-size: 20px;
+    margin-top: 45px;
+    font-family: 'NanumGothicBold';
+    text-align: center;
+}
+.tab-cl{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.tab-cl > figure > img{
+    width: 186px;
+    margin: 45px;
+}
+.tab-cl > p{
+    font-size: 25px;
+    font-family: 'NanumGothicExtraBold';
+    color: #8CC63E;
+}
+.tab-cl > b{
+    font-size: 25px;
+    font-family: 'NanumGothicExtraBold';
+}
+.tab-cl01{
+        display: block;
+        width: 80%; /* 원하는 너비 설정 */
+        margin: 0 auto; /* 수평 중앙 정렬 */
+        float:none;
+    }
+    .tab-cl01 > b{
+        font-size: 25px;
+        font-family: 'NanumGothicBold';
+        text-align: center;
+    }
+    .tab-cl01 > b:after{
+        content: "";
+        display: block;
+        width: 70px; 
+        border-bottom: 3px solid #8CC63E;
+        margin: 20px auto;
+    }
+    .tab-cl01 > figure > img {
+        width: 100%;
+        border: 4px solid rgba(0, 0, 0,0.2);
+        padding: 50px;
+        margin-top: 60px;
+    }
+    .tab-cl01 > p{
+        font-size: 20px;
+        font-family: 'NanumGothic';
+        margin-top: 60px;
+        text-align: center;
+        margin-bottom: 60px;
+    }
+    .tab-cl02{
+        float: none;
+        width: 80%;
+        margin: 30px auto;
+    }
+    .tab-cl02 > b{
+        font-size: 25px;
+        font-family: 'NanumGothicBold';
+        text-align: center;
+    }
+    .tab-cl02 > b:after{
+        content: "";
+        display: block;
+        width: 70px; 
+        border-bottom: 3px solid #8CC63E;
+        margin: 20px auto;
+    }
+    .tab-cl02 > figure > img{
+        width: 100%;
+        border: 4px solid rgba(0, 0, 0,0.2);
+        padding: 50px;
+    }
+    .tab-cl02 > p{
+        font-size: 20px;
+        font-family: 'NanumGothic';
+        margin-top: 50px;
+        text-align: center;
+    }
+}
+@media (max-width: 1024px) {
     .company {
         width: 100%;
         padding: 0 25px;
