--- a/css/scss/_common.scss
+++ b/css/scss/_common.scss
@@ -38,7 +38,7 @@ input, textarea{border:0;}
 // ***********************
 
 :root {
-    --color-white: #F9F9F9;
+    --color-white: #Ffffff;
     --color-gray: #F0F0F0;
     --color-black: #3C3C3C;
     --color-green1: #8CC63E;
