--- a/css/scss/_res_sustainability.scss
+++ b/css/scss/_res_sustainability.scss
@@ -508,7 +508,9 @@
 }
 .main-title-img{
     padding-top: 122px;
-    img{width: 100%;}
+    img{width: 100%;
+        height: 200px;
+    }
 }
 .main-title::after{
     content: '';
