--- a/css/sustainability.css
+++ b/css/sustainability.css
@@ -966,6 +966,9 @@ header {
 .main-title-img {
   padding-top: 122px;
 }
+.main-title-img img {
+  height: 250px;
+}
 
 .main-title::after {
   content: "";
@@ -1717,6 +1720,7 @@ main {
   }
   .main-title-img img {
     width: 100%;
+    height: 200px;
   }
   .main-title::after {
     content: "";
