--- a/css/scss/food.scss
+++ b/css/scss/food.scss
@@ -15,7 +15,7 @@ body{
     color: var(--color-black);
     font-family: 'NanumGothic';
 }
-main{margin-top: 120px;}
+main{margin-top: 121px;}
 //좌우 여백 조정(full width contents 제외)
 h2, h3, .tab-list, .food-safety-1,
 .line{margin: 0 142px;}
@@ -29,10 +29,12 @@ h3{
     font-family: 'NanumGothicBold';
 }
 article{
-    margin: 90px 0;
+    margin-top: 100px;
+    &:nth-of-type(1){margin-top: 90px;}
 }
 .line{
-    padding: 90px 0 0;
+    margin-top: 100px;
+    padding-top: 100px;
     border-top: 1px solid var(--color-black);
 }
 .highlight{color: var(--color-green1); font-weight: bold;}
@@ -53,11 +55,15 @@ article{
 }
 // title
 .main-title-img{
-    width: 100%; height: 100%;
-    img{width: 100%;};
+    width: 100%;
+    height: 250px;
+    img{
+        width: 100%; height: 100%;
+        object-fit: cover;
+    }
 } 
 .main-title{
-    margin: 50px 142px 90px;
+    margin: 50px 142px;
     overflow: hidden;
     position: relative;
     text-align: left;
@@ -347,7 +353,7 @@ article{
         .safety-tab-content{
             > span{display: block; margin: 0 142px;}
             li{
-                margin: 150px 142px;
+                margin: 150px 142px 0;
                 display: flex;
                 column-gap: 10%;
                 transition: .5s;
