--- a/css/scss/_res-company.scss
+++ b/css/scss/_res-company.scss
@@ -6,7 +6,7 @@
 
     }
     .main-title {
-        margin: 30px 50px 90px;
+        margin: 30px 50px;
         font-size: 1.6rem;
     }
     .tab-list {
@@ -415,7 +415,7 @@
         margin: 0 auto 0 auto;
     }
     .main-title {
-        margin: 30px 50px 90px;
+        margin: 50px 0;
         font-size: 1.2rem;
     }
     .tab-list {
@@ -532,17 +532,17 @@
     margin-top: 110px;
 }
 .tab-con02 > b{
-    font-size: 30px;
+    font-size: 35px;
     font-family: 'NanumGothicExtraBold';
     color: #8CC63E;
 }
 .tab-con02 > strong{
-    font-size: 30px;
+    font-size: 35px;
     font-family: 'NanumGothicExtraBold';
 }
 .tab-con02 > p{
     margin-top: 60px;
-    font-size: 20px;
+    font-size: 15px;
     font-family: 'NanumGothic';
     line-height: 2.1;
 }
@@ -824,8 +824,16 @@
         padding: 0 25px;
         margin: 0 auto 0 auto;
     }
+    .main-title-img {
+        margin-top: 120px;
+    }
+    .main-title-img img{
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
     .main-title {
-        margin: 30px 25px;
+        margin: 25px 0;
         font-size: 1rem;
         b{
             padding-right: 0;
