--- a/css/scss/company.scss
+++ b/css/scss/company.scss
@@ -7,10 +7,16 @@
     --color-green2: #B7D47F;
     --color-green3: #DCEFB7;
 } 
-
-.main-title-img img {
-    width: 100%;
+.main-title-img {
     margin-top: 120px;
+}
+.main-title-img img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+.body{
+    background-color: var(--color-white);
 }
 .company{
     width: 1636px;
@@ -18,14 +24,14 @@
     color: var(--color-black);
 }
 .main-title{
-    margin: 50px 0 90px;
+    margin: 50px auto;
     overflow: hidden;
     position: relative;
     font-family: 'money';
     font-size: 1.6rem;
     b{
         display: inline-block;
-        background-color: #FFFFFF;
+        background-color: var(--color-white);
         position: relative;
         z-index: 2;
         padding-right:20px;
@@ -62,7 +68,7 @@
 }
 .tab-con01{
     text-align: center;
-    margin-top: 60px;
+    margin-top: 90px;
     transition: all 0.5s ease;
 }
 .tab-con01 > figure {
@@ -199,7 +205,7 @@
 //history
 .tab-con02{
     text-align: center;
-    margin-top: 110px;
+    margin-top: 90px;
 }
 .tab-con02 > b{
     font-size: 40px;
